<resources>
    <string name="app_name">Recipe-inator</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="random">Random</string>
    <string name="groceries">Groceries</string>
    <string name="grocery_list">Grocery List</string>
    <string name="profile">Profile</string>
    <string name="unit">Unit</string>
    <string name="amount">Amount</string>
    <string name="ingredient">Ingredient</string>
    <string name="recipe">Recipe</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="recipes">Recipes</string>
    <string name="new_recipes">New Recipe</string>
    <string name="recipe_picture">Recipe Picture</string>
    <string name="picture">Picture</string>
    <string name="select">Select</string>
    <string name="min">min</string>
    <string name="ingredients_">Ingredients:</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation_time_parametrized">Preparation Time: %1$d min</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_warning">Are you sure you want to delete this item?</string>
    <string name="confirm">Confirm</string>
    <string name="fail_add_recipe">Failed to add recipe!</string>
    <string name="login_fail">False input. Try again!</string>
    <string name="no_results">No Results</string>
    <string name="groceries_list">Groceries List</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="create_an_account_here">Create a new account</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="already_a_member_log_in_now">Already a member? Log in now</string>
    <string name="enter_the_item_you_need">Enter the item you need</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="instructions">Instructions:</string>
    <string name="category">Category</string>
    <string name="category_parametrized">Category: %1$s</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="instructions1">Instructions</string>
    <string name="timer">Timer</string>
    <string name="set">Set</string>
    <string name="reset">Reset</string>
    <string name="minutes">Minutes</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="time_empty">Time can\'t be empty</string>
    <string name="enter_positive">Enter a positive number</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="time_parametrized">%1$d min</string>
    <string name="serving_parametrized">%1$d serving</string>
    <string name="hungry">Hungry?</string>
    <string name="serving_parametrized2">Servings: %1$d</string>
    <string name="servings">Servings</string>
    <string name="difficulty">Difficulty</string>
    <string name="all_recipes">All recipes</string>
    <string name="hint">HINT: You can search for multiple ingredients by separating them with a comma. This will show recipes that contain %1$s ingredients.</string>
    <string name="all">ALL</string>
    <string name="any">ANY</string>
    <string name="ingredients_list">Ingredient1, Ingredient2, …</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change">Change</string>
</resources>