<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:background="@color/white"
    android:padding="16dp"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_above="@id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/minutes"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="@+id/button_start_pause"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_start_pause"
        app:layout_constraintTop_toBottomOf="@+id/button_start_pause" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="00:00"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="@+id/button_reset"
        app:layout_constraintStart_toStartOf="@+id/button_start_pause"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_countdown" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_countdown"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/button_start_pause"
        android:text="@string/reset"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/button_start_pause"
        app:layout_constraintTop_toTopOf="@+id/button_start_pause"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>