<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/edit_profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/edit_profile"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <include
        android:id="@+id/user_data"
        layout="@layout/user_data_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_label"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/profile_picture_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/picture"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/user_data"
        app:layout_constraintTop_toBottomOf="@+id/user_data"
        app:layout_constraintEnd_toStartOf="@id/remove_profile_picture"/>

    <Button
        android:id="@+id/select_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/profile_picture_text"
        app:layout_constraintStart_toEndOf="@id/picture_preview"/>

    <ImageView
        android:id="@+id/remove_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_close_24"
        android:layout_marginStart="16dp"
        app:tint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/picture_preview"
        app:layout_constraintStart_toEndOf="@+id/profile_picture_text"
        app:layout_constraintTop_toTopOf="@+id/profile_picture_text"
        app:layout_constraintBottom_toBottomOf="@+id/profile_picture_text" />

    <ImageView
        android:id="@+id/picture_preview"
        android:layout_width="wrap_content"
        android:adjustViewBounds="true"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/remove_profile_picture"
        app:layout_constraintBottom_toBottomOf="@+id/profile_picture_text"
        app:layout_constraintTop_toTopOf="@+id/profile_picture_text" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/change"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_text" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>